fixed issue of overlapping sections

--- a/htdocs/styles/style.css
+++ b/htdocs/styles/style.css
@@ -50,7 +50,7 @@ footer {
   padding : 5px 5px;
 }
 section {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 
